--- a/RT-STM32F401RE-NUCLEO64-SHELL01/.project
+++ b/RT-STM32F401RE-NUCLEO64-SHELL01/.project
@@ -34,5 +34,10 @@
 			<type>2</type>
 			<locationURI>CHIBIOS/os</locationURI>
 		</link>
+		<link>
+			<name>shell</name>
+			<type>2</type>
+			<location>C:/ChibiStudio/chibios2111/os/various/shell</location>
+		</link>
 	</linkedResources>
 </projectDescription>
